# google-workspace-apis

./: Cargo.toml  README.md  Readme.md
.github/workflows/: publish.yml
examples/: axum_calendar_example.rs
src/: lib.rs
src/auth/: client.rs  mod.rs  scopes.rs  types.rs
src/calendar/: mod.rs  requests.rs
src/calendar/events/: mod.rs  request_tests.rs  requests.rs  tests.rs  types.rs
src/gmail/: requests.rs  types.rs
src/tasks/: mod.rs  requests.rs  types.rs
src/tasks/tasklist/: requests.rs  types.rs
src/utils/: default_builder.rs  deserialize.rs  mod.rs  request.rs  serialize.rs  validation.rs
