[package]
name = "google-workspace-apis"
description = "A Rust library for interacting with Google Workspace APIs"
repository = "https://github.com/BitsAndDroids/google-workspace-apis"
keywords = ["google", "workspace", "apis", "rust", "library"]
categories = ["web-programming", "api-bindings", "web-programming::http-client"]
version = "0.2.1"
edition = "2024"
license = "MIT"

[features]
calendar = []
tasks = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "1.0", features = ["uuid1", "chrono04"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde", "alloc"] }
